--- a/mumu-session-hazelcast/pom.xml
+++ b/mumu-session-hazelcast/pom.xml
@@ -6,64 +6,19 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mumu-session-redis</artifactId>
+    <artifactId>mumu-session-hazelcast</artifactId>
     <packaging>war</packaging>
-    <name>mumu-session-redis Maven Webapp</name>
+    <name>mumu-session-hazelcast Maven Webapp</name>
     <url>http://maven.apache.org</url>
-
-    <properties>
-        <jetty.version>9.4.6.v20170531</jetty.version>
-    </properties>
-
     <dependencies>
-        <!-- spring-data-redis -->
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>1.8.7.RELEASE</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.6.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-
-        <!-- jetty启动插件 -->
-        <!--<dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.0</version>
-        </dependency>-->
     </dependencies>
     <build>
-        <finalName>redis</finalName>
+        <finalName>hazelcast</finalName>
         <plugins>
             <!-- tomcat 启动服务 -->
             <plugin>
@@ -72,27 +27,27 @@
                 <version>2.0</version>
                 <configuration>
                     <backgroundProcessorDelay>5</backgroundProcessorDelay>
-                    <url>http://localhost:8080/redis</url>
+                    <url>http://localhost:8082/hazelcast</url>
                     <server>tomcat7</server>
-                    <path>/redis</path>
-                    <port>8080</port>
+                    <path>/hazelcast</path>
+                    <port>8082</port>
                 </configuration>
             </plugin>
             <!-- jetty 启动服务 -->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty.version}</version>
+                <version>9.4.6.v20170531</version>
                 <configuration>
                     <httpConnector>
-                        <port>8080</port>
+                        <port>8082</port>
                     </httpConnector>
                     <stopKey>stop</stopKey>
-                    <stopPort>9966</stopPort>
+                    <stopPort>9968</stopPort>
                     <reload>manual</reload>
                     <dumpOnStart>true</dumpOnStart>
                     <webApp>
-                        <contextPath>/redis</contextPath>
+                        <contextPath>/hazelcast</contextPath>
                     </webApp>
                     <requestLog implementation="org.eclipse.jetty.server.NCSARequestLog">
                         <filename>target/access-yyyy_mm_dd.log</filename>
