--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>mumu-session-redis</module>
         <module>mumu-session-mongo</module>
         <module>mumu-session-gemfire</module>
+        <module>mumu-session-hazelcast</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -62,6 +63,7 @@
             <version>1.7.5</version>
         </dependency>
 
+        <!-- spring -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
@@ -75,6 +77,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
@@ -124,9 +131,23 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
+    <!-- 组织机构 -->
+    <organization>
+        <name>babymm</name>
+        <url>https://github.com/babymm</url>
+    </organization>
+    <!-- 开源license -->
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <!-- 开发者信息 -->
     <developers>
         <developer>
@@ -140,7 +161,16 @@
             <organization>baby慕慕</organization>
         </developer>
     </developers>
-
+    <scm>
+        <connection>scm:git:git://github.com/mumuweb/mumu-session.git</connection>
+        <developerConnection>scm:git:git://github.com/mumuweb/mumu-session.git</developerConnection>
+        <url>https://github.com/mumuweb/mumu-session.git</url>
+    </scm>
+    <!--issues-->
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/mumuweb/mumu-session/issues</url>
+    </issueManagement>
     <!-- 配置项目版本管理 -->
     <distributionManagement>
         <repository>
